Fixed documentation navigation disappearing on mobile by namespacing the autohiding navigation bar to .navigation__primary

--- a/test/dummy/app/frontend/stylesheets/components/_navigation.scss
+++ b/test/dummy/app/frontend/stylesheets/components/_navigation.scss
@@ -7,7 +7,7 @@ $navigation-hover-bg: rgba($black, .05);
 // Navigation bar
 // =========================================================================
 
-.navigation {
+.navigation__primary {
   @include media-query($breakpoint-header) {
     display: none;
   }
